--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Print PWD
+        run: pwd
       - name: Spin up test environment
         run: |
           docker-compose -f docker-compose.test.yml build
