Roll to better port

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Spin up test environment
         run: |
           docker-compose -f docker-compose.test.yml build
+      - name: Build database
+        run: |
           docker-compose -f docker-compose.test.yml run --rm server npx prisma migrate reset --force test && npx prisma migrate dev --name test --force
-      # - name: Build database
-      #   run: |
       - name: Run tests
         run: |
           docker-compose -f docker-compose.test.yml run --rm server yarn jest -i
