--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,21 @@ on:
       - master
 
 jobs:
-  test:
+  Test:
     runs-on: ubuntu-latest
+
+    services:
+      mariadb:
+        image: mariadb:latest
+        ports:
+          - 3306
+        env:
+          MYSQL_USER: user
+          MYSQL_PASSWORD: password
+          MYSQL_DATABASE: paddlefest_volunteer
+          MYSQL_ROOT_PASSWORD: password
+        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
+
     steps:
       - uses: actions/checkout@v2
       - name: Build and test
