--- a/.github/workflows/test-v2.yml
+++ b/.github/workflows/test-v2.yml
@@ -28,12 +28,10 @@ jobs:
           while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
             sleep 1
           done
-
-      - name: Test
-        env:
-          DATABASE_URL: mysql://user:password@127.0.0.1:${{ job.services.mariadb.ports[3306] }}/paddlefest_volunteer
-        run: |
-          while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
-            sleep 1
-          done
           npx prisma migrate reset --force test && npx prisma migrate dev --name test --force
+
+      # - name: Test
+      #   env:
+      #     DATABASE_URL: mysql://user:password@127.0.0.1:${{ job.services.mariadb.ports[3306] }}/paddlefest_volunteer
+      #   run: |
+      #     npx prisma migrate reset --force test && npx prisma migrate dev --name test --force
