--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:run": "docker-compose -f docker-compose.test.yml run --rm server yarn jest -i",
     "test:1": "docker-compose -f docker-compose.test.yml build --no-cache",
     "test:1:cache": "docker-compose -f docker-compose.test.yml build",
-    "test:2": "docker-compose -f docker-compose.test.yml run --rm server npx prisma migrate reset --force test && npx prisma migrate dev --name test --force"
+    "test:2": "docker-compose -f docker-compose.test.yml run --rm server npx prisma migrate reset --force test && npx prisma migrate dev --name test --force",
+    "test:migrate:dockerless": "dotenv -e .env.test -- npx prisma migrate reset --force test && dotenv -e .env.test -- npx migrate dev --name test --force",
+    "test:run:dockerless": "dotenv -e .env.test -- yarn jest -i"
   },
   "keywords": [],
   "author": "",
