--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,9 @@ jobs:
         with:
           node-version: 16
       - run: npm install
-      - run: npm test:migrate:dockerless
+      - run: npm run test:migrate:dockerless
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-      - run: npm test:run:dockerless
+      - run: npm run test:run:dockerless
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
