--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           node-version: 16
       - run: npm install
+      - run: npx prisma generate
       - run: npm run test:migrate:dockerless
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
