--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,10 @@ jobs:
         with:
           node-version: 16
       - run: npm install
+      - run: npm run test:migrate:dockerless
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
       - run: npx prisma generate
-      # - run: npm run test:migrate:dockerless
-      #   env:
-      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
       - run: npm run test:run:dockerless
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
