Fix migrate command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"migrate": "npx prisma format && npx prisma migrate dev && npx prisma generate",
-		"migrate:dockerless": "npx migrate dev --name test --force",
+		"migrate:dockerless": "npx prisma migrate dev --name test --force",
 		"test:run:dockerless": "yarn jest -i",
 		"test": "jest",
 		"lint": "eslint . --ext .js,.ts"
