--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@babel/preset-env": "^7.20.2",
 		"babel-eslint": "^10.1.0",
 		"babel-jest": "^29.3.1",
+		"eslint": "^8.32.0",
 		"jest": "^29.3.1",
 		"ts-jest": "^29.0.5"
 	},
