--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"lint": "eslint . --ext .js,.ts",
 		"frontend": "cd app && yarn start",
 		"backend": "cd api && node index.js",
-		"build": "cd app && yarn build"
+		"build": "cd app && yarn && yarn build"
 	},
 	"keywords": [],
 	"author": "",
