--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"nanospinner": "^1.1.0",
 		"prettier": "^2.8.3",
 		"sass": "^1.59.3",
+		"twilio": "^4.9.0",
 		"uuid": "^9.0.0"
 	},
 	"imports": {
