--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 		"lint": "eslint . --ext .js,.ts",
 		"frontend": "cd app && yarn start",
 		"backend": "cd api && node index.js",
-		"build": "cd app && yarn && yarn build && cd ..",
-		"g_start": "npx prisma generate && yarn backend"
+		"build": "cd app && yarn && yarn build && cd .. && cd admin && yarn && yarn build && cd ..",
+		"g_start": "npx prisma generate && yarn backend",
+		"size": "cloc paddlefest-volunteer-2 --exclude-dir=node_modules --exclude-ext json"
 	},
 	"keywords": [],
 	"author": "",
@@ -36,6 +37,7 @@
 		"dotenv": "^16.0.3",
 		"eslint-plugin-import": "^2.27.5",
 		"express": "^4.18.2",
+		"express-basic-auth": "^1.2.1",
 		"handlebars": "^4.7.7",
 		"inquirer": "^9.1.4",
 		"moment": "^2.29.4",
