--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"eslint-plugin-import": "^2.27.5",
 		"express": "^4.18.2",
 		"express-basic-auth": "^1.2.1",
+		"express-ws": "^5.0.2",
 		"handlebars": "^4.7.7",
 		"inquirer": "^9.1.4",
 		"moment": "^2.29.4",
