--- a/admin/package.json
+++ b/admin/package.json
@@ -8,11 +8,11 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"antd": "^5.3.2",
-		"moment-timezone": "^0.5.42",
+		"moment-timezone": "^0.5.43",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
-		"styled-components": "^5.3.9",
+		"styled-components": "^6.0.0-rc.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
