--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"lint": "eslint . --ext .js,.ts",
 		"frontend": "cd app && yarn start",
 		"backend": "cd api && node index.js",
-		"build": "cd app && yarn && yarn build && cd .. && cd admin && yarn && yarn build && cd ..",
+		"build": "cd app && yarn && yarn build && cd ..",
 		"g_start": "npx prisma generate && yarn backend",
 		"size": "cloc paddlefest-volunteer-2 --exclude-dir=node_modules --exclude-ext json"
 	},
