--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"moment": "^2.29.4",
 		"moment-timezone": "^0.5.42",
 		"nanospinner": "^1.1.0",
+		"postmark": "^4.0.5",
 		"prettier": "^2.8.3",
 		"sass": "^1.59.3",
 		"twilio": "^4.9.0",
